--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,21 @@
       <version>3.0</version>
     </dependency>
     <dependency>
+      <groupId>org.sonatype.aether</groupId>
+      <artifactId>aether-connector-wagon</artifactId>
+      <version>1.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.wagon</groupId>
+      <artifactId>wagon-http</artifactId>
+      <version>2.8</version>
+    </dependency>
+    <!-- <dependency>
+       <groupId>org.sonatype.aether</groupId>
+       <artifactId>aether-connector-file</artifactId>
+       <version>1.7</version>
+     </dependency>-->
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
