--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
       <artifactId>wagon-http</artifactId>
       <version>2.8</version>
     </dependency>
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
     <!-- <dependency>
        <groupId>org.sonatype.aether</groupId>
        <artifactId>aether-connector-file</artifactId>
